--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.AppSleep"
         tools:targetApi="31">
         <activity
+            android:name=".CircadianRhythmActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NocturnalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ListarAlarmasActivity"
+            android:exported="false" />
+        <activity
             android:name=".changekey"
             android:exported="false" />
         <activity
